fix: More fixes on mobile menu height

--- a/src/components/header/styles/header.css
+++ b/src/components/header/styles/header.css
@@ -66,6 +66,7 @@
   width: 100%;
   height: 100vh;
   text-align: center;
+  z-index: 999;
 }
 
 .open {
